# discriminative_lexicon_model

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
discriminative_lexicon_model/: __init__.py  ldl.py  mapping.py  measures.py  performance.py
doc/source/: conf.py  index.rst  mapping.rst  quickstart.rst
docs/: requirements.txt
docs/source/: conf.py  incremental.rst  index.rst  mapping.rst  measures.rst  performance.rst  quickstart.rst
pyldl/: .mapping.py.swp  __init__.py  classldl.py  ldl.py  mapping.py  measures.py  performance.py
pyldl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classldl.py  test_ldl.py  test_mapping.py  test_mapping_gpu.py  test_mapping_produce.py  test_measures.py  test_performance.py  test_produce.py
tests/resources/: chat.nc  cmat_00.nc  cmat_01.nc  cmat_02.nc  cmat_03.nc  fmat.nc  gmat.nc  predict_00.csv  predict_02.csv  predict_04.csv  predict_06.csv  predict_df_00.csv  predict_df_01.csv  predict_df_02.csv  predict_df_03.csv  predict_df_04.csv  predict_df_06.csv  predict_df_07.csv  shat.nc  smat_sim_000.nc  smat_sim_001.nc  smat_sim_004.nc  smat_sim_005.nc  smat_sim_016.nc  smat_sim_017.nc  smat_sim_021.nc  smat_sim_024.nc  smat_sim_029.nc  smat_sim_04.nc  smat_sim_040.nc  smat_sim_044.nc  smat_sim_045.nc  smat_sim_048.nc  smat_sim_05.nc  smat_sim_052.nc  smat_sim_053.nc  smat_sim_056.nc  smat_sim_06.nc  smat_sim_061.nc  smat_sim_066.nc  (+174 more)
